# fun_projects

./: README.md  different_opts.py  double_descent  polynomial.py
Ada/: CMakeLists.txt  ada_main.cpp
Ada/src/: DataTypes.h  DifferentiableFunction.h  EdgeFunction.h  ElementalFunctions.h  Node.h  ada_main.cpp
BurrowsWheeler/: LICENSE.md  README.md  achilleis.txt  bw.py  zauberlehrling.txt
clustering/: myW2V.py
clustering/gaussianMix/: gaussianMix.py  oldFaithful.py
clustering/kmeans/: kmeans.py  oldFaithful.py
double_descent/: README.md  different_opts.py  double_descent.py  polynomial.py  svd_explore.py  test_opt.py
gradient_descent_cr/: polynomial.py  test_opt.py
